// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price> renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    0
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {caption} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    from
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    0
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {fixed} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    19.12
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {style} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "color": "orange",
        },
      ]
    }
    subtitle={false}
  >
    19
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "color": "orange",
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    €
  </Text>
</View>
`;

exports[`<Price> when {symbol} (left) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    $
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    4
  </Text>
</View>
`;

exports[`<Price> when {symbol} (right) 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    4
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    eur
  </Text>
</View>
`;

exports[`<Price> when {value} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {},
      ]
    }
    subtitle={false}
  >
    20
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    body={true}
    caption={false}
    ellipsizeMode="tail"
    headline={true}
    level={6}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
          "fontWeight": "400",
          "textAlignVertical": "center",
        },
        Object {
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "700",
          "letterSpacing": -1.2,
          "lineHeight": 22,
        },
        false,
        Object {
          "fontWeight": "600",
          "transform": Array [
            Object {
              "scale": 0.8,
            },
          ],
        },
      ]
    }
    subtitle={false}
  >
    €
  </Text>
</View>
`;
